    fill-pointer signals a type-error as required. (thanks to
    Lars Brinkhoff)
  * bug fix: disassemly of funcallable instances works.
  * bug fix: single stepping on PPC.
  * bug fix: fix thread-safety problems in the type system (generally 
    manifesting as nonsensical errors like "STRING is a bad type specifier 
    for sequences" or "The value 1 is not of type FIXNUM")
  * Improvements to the Windows port:
    ** floating point exceptions are now reported correctly.
    ** stack exhaustion detection works partially.
    ** more accurate GET-INTERNAL-REAL-TIME.
    ** better RUN-PROGRAM behaviour in case of errors in the child
       process.
    ** PROBE-FILE now simplifies pathnames correctly.
    ** DIRECTORY now works correctly with :WILD-INFERIORS.
    ** DECODE-UNIVERSAL-TIME works on times before 00:00:00 January
       1st 1970 (although time timezone data will be unreliable).
    ** Hyperbolic functions TANH, ASINH, ACOSH, and ATANH work.

changes in sbcl-0.9.18 (1.0.beta?) relative to sbcl-0.9.17:
  * enhancement: SB-POSIX now supports cfsetispeed(3), cfsetospeed(3),
    cfgetispeed(3), cfgetospeed(3), and related constants. (thanks to
    Max-Gerd Retzlaff)
  * bug fix: two potential GC deadlocks affecting threaded builds.
  * bug fix: (TYPEP #\A '(NOT (MEMBER #\" #\{ #\:))) now correctly
    returns T (reported by Anton Kazennikov)
  * bug fix: the STORE-VALUE restart of CHECK-TYPE works correctly
    with non-variable places
  * bug fix: remove a race condition in the setting of
    funcallable-instance functions, this should make threaded CLOS
    code more stable against memory faults.
  * bug fix: corruption of specials when unbinding is interrupted by an
    asynchronous unwind (reported by Hannu Koivisto)
  * improvement: the debugger will now also display local variables that
    are only used once, for code compiled with a DEBUG optimization quality
    of 2 or higher.

changes in sbcl-0.9.17 (0.9.99?) relative to sbcl-0.9.16: