@@ -24,6 +24,8 @@ changes in sbcl-0.9.19 (1.0.0?) relative to sbcl-0.9.18:
   * bug fix: fix thread-safety problems in the type system (generally 
     manifesting as nonsensical errors like "STRING is a bad type specifier 
     for sequences" or "The value 1 is not of type FIXNUM")
+  * bug fix: version components are handled correctly in TRANSLATE-PATHNAME
+    (reported by Josip Gracin)
   * Improvements to the Windows port:
     ** floating point exceptions are now reported correctly.
     ** stack exhaustion detection works partially.
